Bug 221714 - Blank payee not accepted
Summary: Blank payee not accepted
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-07 22:38 UTC by David Houlden
Modified: 2010-01-08 01:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2010-01-07 22:38:46 UTC
Version:            (using KDE 4.3.4)
OS:                Linux

When entering a new schedule or entering a transaction in the ledger it should be possible to leave the payee (pay to / from) blank. If I do leave it blank then kmymoney enters the first payee from my list of previously used payees.
Comment 1 Alvaro Soliverez 2010-01-08 00:14:11 UTC
This is confirmed. Combos that are optional need to be taked into account. It's part of the port to the MVC widgets.
Comment 2 Alvaro Soliverez 2010-01-08 01:30:05 UTC
SVN commit 1071427 by asoliverez:

Added a blank payee to the combo to allow to select a blank payee selection

BUG:221714

 M  +4 -1      kmymoneycombo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1071427