Added a blank payee to the combo to allow to select a blank payee selection

BUG:221714

svn path=/trunk/playground/office/kmymoney/; revision=1071427